--- a/apps/oss-dynamic/app/globals.css
+++ b/apps/oss-dynamic/app/globals.css
@@ -9,3 +9,5 @@
 @import "fumadocs-ui/css/preset.css";
 
 @source '../node_modules/fumadocs-ui/dist/**/*.js';
+
+@source '../../../content/**/*.mdx';
