refactor: rename lots of stuff, add shadcn

--- a/apps/oss-dynamic/app/globals.css
+++ b/apps/oss-dynamic/app/globals.css
@@ -10,4 +10,4 @@
 
 @source '../node_modules/fumadocs-ui/dist/**/*.js';
 
-@source '../../../packages/ui/src/**/*.tsx';
+@source '../../../workspace/ui/src/**/*.tsx';
