--- a/apps/oss-static/app/globals.css
+++ b/apps/oss-static/app/globals.css
@@ -19,3 +19,7 @@
 @source '../node_modules/fumadocs-ui/dist/**/*.js';
 
 @source '../../../workspace/ui/src/**/*.tsx';
+
+#nd-nav {
+  @apply max-w-7xl;
+}
