fix blog styles

--- a/apps/oss-static/app/globals.css
+++ b/apps/oss-static/app/globals.css
@@ -22,5 +22,5 @@
 @source '../../../foundations/cms/src/**/*.tsx';
 
 #nd-nav {
-  @apply max-w-7xl;
+  @apply !max-w-7xl rounded-lg !bg-transparent !shadow-none mx-4 mx-auto;
 }
